Add plugin descriptions

--- a/languages/en.json
+++ b/languages/en.json
@@ -2,6 +2,6 @@
 	"plugin-data":
 	{
 		"name": "Sidebar Banners",
-		"description": ""
+		"description": "This plugin adds link banners to the sidebar. You can add up to 5 banners."
 	}
 	}
