--- a/languages/ja_JP.json
+++ b/languages/ja_JP.json
@@ -2,6 +2,6 @@
 	"plugin-data":
 	{
 		"name": "サイドバーバナー",
-		"description": ""
+		"description": "サイドバーにリンクバナーを追加するためのプラグインです。最大5個のバナーを設置できます。"
 	}
 }
